Fixed spacing in services list on mobile

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -252,6 +252,10 @@
   }
   .rowHR {
     width: 100%;
+    margin-top: -0.5em;
+  }
+  .servicesList {
+    margin-bottom: 2em;
   }
 }
 
